--- a/templates/additem.html
+++ b/templates/additem.html
@@ -69,38 +69,38 @@
         <input type="text" name="title" id="title" required><br>
         
         <label for="type">Type:</label>
-        <input type="text" name="type" id="type" required><br>
+        <input type="text" name="type" id="type" ><br>
         
         <label for="brand">Brand:</label>
-        <input type="text" name="brand" id="brand" required><br>
+        <input type="text" name="brand" id="brand" ><br>
         
         <label for="model">Model:</label>
-        <input type="text" name="model" id="model" required><br>
+        <input type="text" name="model" id="model" ><br>
         
         <label for="year">Year:</label>
-        <input type="number" name="year" id="year" required><br>
+        <input type="number" name="year" id="year" ><br>
         
         <label for="color">Color:</label>
-        <input type="text" name="color" id="color" required><br>
+        <input type="text" name="color" id="color" ><br>
         
         <label for="engine_displacement">Engine Displacement (cc):</label>
-        <input type="number" name="engine_displacement" id="engine_displacement" required><br>
+        <input type="number" name="engine_displacement" id="engine_displacement" ><br>
         
         <label for="fuel_type">Fuel Type:</label>
-        <select name="fuel_type" id="fuel_type" required>
+        <select name="fuel_type" id="fuel_type" >
             <option value="petrol">Petrol</option>
             <option value="diesel">Diesel</option>
             <option value="electric">Electric</option>
         </select><br>
         
         <label for="transmission_type">Transmission Type:</label>
-        <select name="transmission_type" id="transmission_type" required>
+        <select name="transmission_type" id="transmission_type" >
             <option value="automatic">Automatic</option>
             <option value="manual">Manual</option>
         </select><br>
         
         <label for="mileage">Mileage (km or miles):</label>
-        <input type="number" name="mileage" id="mileage" required><br>
+        <input type="number" name="mileage" id="mileage" ><br>
         
         <label for="price">Price:</label>
         <input type="number" name="price" id="price" required><br>
@@ -118,7 +118,7 @@
         <input type="text" name="title" id="title" required><br>
     
         <label for="type_computers">Type:</label>
-        <select name="type" id="type" required>
+        <select name="type" id="type">
             <option value="tablet">Tablet</option>
             <option value="notebook">Notebook</option>
             <option value="desktop">Desktop</option>
@@ -126,28 +126,28 @@
         </select><br>
     
         <label for="brand_computers">Brand:</label>
-        <input type="text" name="brand" id="brand" required><br>
+        <input type="text" name="brand" id="brand" ><br>
         
         <label for="model_computers">Model:</label>
-        <input type="text" name="model" id="model" required><br>
+        <input type="text" name="model" id="model" ><br>
         
         <label for="year_computers">Year:</label>
-        <input type="number" name="year" id="year" required><br>
+        <input type="number" name="year" id="year" ><br>
         
         <label for="processor_computers">Processor:</label>
-        <input type="text" name="processor" id="processor" required><br>
+        <input type="text" name="processor" id="processor" ><br>
         
         <label for="ram_computers">RAM:</label>
-        <input type="text" name="ram" id="ram" required><br>
+        <input type="text" name="ram" id="ram" ><br>
         
         <label for="storage_computers">Storage:</label>
-        <input type="text" name="storage" id="storage" required><br>
+        <input type="text" name="storage" id="storage" ><br>
         
         <label for="graphics_card_computers">Graphics Card:</label>
         <input type="text" name="graphics_card" id="graphics_card"><br>
         
         <label for="os_computers">Operating System:</label>
-        <input type="text" name="operating_system" id="operating_system" required><br>
+        <input type="text" name="operating_system" id="operating_system" ><br>
         
         <label for="price_computers">Price:</label>
         <input type="number" name="price" id="price" required><br>
@@ -165,25 +165,25 @@
         <input type="text" name="title" id="title" required><br>
 
         <label for="brand_phones">Brand:</label>
-        <input type="text" name="brand" id="brand" required><br>
+        <input type="text" name="brand" id="brand" ><br>
 
         <label for="model_phones">Model:</label>
-        <input type="text" name="model" id="model" required><br>
+        <input type="text" name="model" id="model" ><br>
 
         <label for="year_phones">Year:</label>
-        <input type="number" name="year" id="year" required><br>
+        <input type="number" name="year" id="year" ><br>
 
         <label for="os_phones">Operating System:</label>
-        <input type="text" name="operating_system" id="operating_system" required><br>
+        <input type="text" name="operating_system" id="operating_system" ><br>
 
         <label for="processor_phones">Processor:</label>
         <input type="text" name="processor" id="processor"><br>
 
         <label for="ram_phones">RAM:</label>
-        <input type="text" name="ram" id="ram" required><br>
+        <input type="text" name="ram" id="ram" ><br>
 
         <label for="storage_phones">Storage:</label>
-        <input type="text" name="storage" id="storage" required><br>
+        <input type="text" name="storage" id="storage" ><br>
 
         <div id="camera_specifications">
             <label>Camera Specifications:</label>
@@ -191,7 +191,7 @@
         </div>
 
         <label for="battery_phones">Battery Capacity:</label>
-        <input type="text" name="battery_capacity" id="battery_capacity" required><br>
+        <input type="text" name="battery_capacity" id="battery_capacity" ><br>
 
         <label for="price_phones">Price:</label>
         <input type="number" name="price" id="price" required><br>
@@ -209,7 +209,7 @@
         <input type="text" name="title" id="title" required><br>
 
         <label for="tutor_name">Tutor Name:</label>
-        <input type="text" name="tutor_name" id="tutor_name" required><br>
+        <input type="text" name="tutor_name" id="tutor_name" ><br>
 
          <div id="lessonSpecifications">
             <label>Lessons:</label>
@@ -217,10 +217,10 @@
         </div>
 
         <label for="location">Location:</label>
-        <input type="text" name="location" id="location" required><br>
+        <input type="text" name="location" id="location" ><br>
 
         <label for="duration">Duration:</label>
-        <input type="text" name="duration" id="duration" required><br>
+        <input type="text" name="duration" id="duration" ><br>
 
         <label for="price_lessons">Price:</label>
         <input type="number" name="price" id="price" required><br>
