--- a/templates/item_detail.html
+++ b/templates/item_detail.html
@@ -88,17 +88,13 @@
             {% if item['category'] == 'private lessons' %}
                 {% if item.get('tutor_name') %}<p><strong>Tutor Name:</strong> {{ item['tutor_name'] }}</p>{% endif %}
                 {% if item.get('lessons') %}
-                    <p><strong>Lessons:</strong></p>
-                    <ul>
-                        {% for lesson in item['lessons'] %}
-                            <li>{{ lesson }}</li>
-                        {%  endfor %}
-                    </ul>
+                    <p><strong>Lessons:</strong> {{ item['lessons']|join(', ') }}</p>
                 {% endif %}
                 {% if item.get('location') %}<p><strong>Location:</strong> {{ item['location'] }}</p>{% endif %}
                 {% if item.get('duration') %}<p><strong>Duration:</strong> {{ item['duration'] }}</p>{% endif %}
             {% endif %}
     </div>
+    
     {% if user %}
     <div class="contact-info">
         <h3>Contact Information</h3>
