--- a/templates/item_detail.html
+++ b/templates/item_detail.html
@@ -85,7 +85,7 @@
                 {% if item.get('battery_capacity') %}<p><strong>Battery Capacity:</strong> {{ item['battery_capacity'] }}</p>{% endif %}
             {% endif %}
 
-            {% if item['category'] == 'private lessons' %}
+            {% if item['category'] == 'lessons' %}
                 {% if item.get('tutor_name') %}
                     <p><strong>Tutor Name:</strong> {{ item['tutor_name'] }}</p>
                 {% endif %}
