--- a/templates/item_detail.html
+++ b/templates/item_detail.html
@@ -32,14 +32,16 @@
     </style>
 </head>
 <body>
-    <div class="item-container">
-    <h2>{{ item['title'] }}</h2>
-    <div class= "item-image">
-        {% if item.get('image_link') %}
-        <img src="{{ item['image_link'] }}" alt="{{ item['title'] }}" style="width:300px;">
-    {% else %}
-        <p>"{{item['title']}}"</p>
-    {% endif %}
+    <<div class="item-container">
+        <h2>{{ item['title'] }}</h2>
+        <div class="item-image">
+            {% if item.get('image_link') %}
+                <img src="{{ item['image_link'] }}" style="width:300px;">
+                <p>{{ item['title'] }}</p>
+            {% else %}
+                <p>{{ item['title'] }}</p>
+            {% endif %}
+        </div>
     </div>
     <div class="item-details">
         <p><strong>Category:</strong> {{ item['category'] }}</p>
