--- a/templates/index.html
+++ b/templates/index.html
@@ -122,7 +122,11 @@
         {% for item in items %}
         <div class="item">
             <a href="/item/{{ item['_id'] }}">
-                <img src="{{ item['image_link'] }}" alt="{{ item['title'] }}" style="width:100px;height:100px;">
+                {% if item.get('image_link') %}
+                    <img src="{{ item['image_link'] }}" alt="{{ item['title'] }}" style="width:100px;height:100px;">
+                {% else %}
+                    <p>{{ item['title'] }}</p>
+                {% endif %}
                 <div>{{ item['title'] }}</div>
             </a>
         </div>
