--- a/templates/index.html
+++ b/templates/index.html
@@ -118,7 +118,7 @@
         </ul>
     </div>
     {% for item in items %}
-        <div class="item">
+        <div class="items">
             <a href="/item/{{ item['_id'] }}">{{ item['title'] }}</a>
             {% if item.get('image_link') %}
             <img src="{{ item['image_link'] }}" alt="{{ item['title'] }}" style="width:100px;height:100px;">
