--- a/templates/index.html
+++ b/templates/index.html
@@ -136,6 +136,9 @@
         <div class="pagination">
             <a href="#">Previous</a> <a href="#">1</a> <a href="#">2</a> <a href="#">Next</a>
         </div>
+        <div class="back-to-home">
+            <a href="/">Back to Home</a>
+        </div>
     </div>
     <div class="footer">
         <p>© 2024 CENGden. All rights reserved.</p>
