--- a/templates/category.html
+++ b/templates/category.html
@@ -120,10 +120,15 @@
     
     <h2>Items in {{ category }}</h2>
         <div class="items">
-            <a href="/item/{{ item['_id'] }}">{{ item['title'] }}</a>
-            {% if item.get('image_link') %}
-            <img src="{{ item['image_link'] }}" alt="{{ item['title'] }}" style="width:240px;height:240px;">
-            {% endif %}
+            {% for item in items %}
+            <div>
+                <a href="/item/{{ item['_id'] }}">{{ item['title'] }}</a>
+                    {% if item.get('image_link') %}
+                    <img src="{{ item['image_link'] }}" alt="{{ item['title'] }}" style="width:200px;height:200px;">
+                    {% endif %}
+                </a>
+            </div>
+            {% endfor %}
         </div>
         <div class="pagination">
             <a href="#">Previous</a> <a href="#">1</a> <a href="#">2</a> <a href="#">Next</a>
