fix bug in category.html

--- a/templates/category.html
+++ b/templates/category.html
@@ -63,7 +63,7 @@
             border-radius: 5px;
         }
 
-        .latest-items {
+        .items {
             margin-top: 20px;
             width: 80%; /* Adjust the width as needed */
             display: flex;
