--- a/templates/category.html
+++ b/templates/category.html
@@ -124,7 +124,7 @@
             <div class="item">
                 <a href="/item/{{ item['_id'] }}">
                     {% if item.get('image_link') %}
-                    <img src="{{ item['image_link'] }}" alt="{{ item['title'] }}">
+                    <img src="{{ item['image_link'] }}" alt="{{ item['title'] }}"style="width:200px;height:200px;">
                     {% endif %}
                     <div>{{ item['title'] }}</div>
                 </a>
