--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CENGden</title>
+    <script>
+        function confirmDelete(itemId) {
+            var confirmation = confirm("Are you sure you want to delete this item?");
+            if (confirmation) {
+                window.location.href = `/delete_item/${itemId}`;
+            }
+        }
+    </script>
+    
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -121,15 +130,16 @@
         <div class="items">
             <a href="/item/{{ item['_id'] }}">{{ item['title'] }}</a>
             {% if item.get('image_link') %}
-            <img src="{{ item['image_link'] }}" alt="{{ item['title'] }}" style="width:100px;height:100px;">
+            <img src="{{ item['image_link'] }}" alt="{{ item['title'] }}" style="width:200px;height:200px;">
             {% endif %}
-            {% if myitems %}
+        {% if myitems %}
             <!-- Display activate/deactivate links only for My Items view -->
             {% if item.get('active', True) %}
             <a href="/deactivate_item/{{ item['_id'] }}">Deactivate</a>
             {% else %}
             <a href="/activate_item/{{ item['_id'] }}">Activate</a>
             {% endif %}
+            <a href="#" onclick="confirmDelete('{{ item['_id']}}'); return false;">Delete</a>
             {% endif %}
         </div>
         {% endfor %}
